--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,6 +40,54 @@
         {{ end }}
     </main>
 
+    <section class="articlegroup articlegroup--work">
+        <h6>Work</h6>
+
+            <article class="article article--work">
+                <div class="article__inner">
+                    <h4 class="meta">Pattern Library</h4>
+                    <h5>City Pantry</h5>
+                    <p>Working for Neptik, I built and implemented a pattern library for City Pantry, working with their in-house development team on their Angular website.</p>
+                    <a href="https://citypantry.com" target="_blank" rel="noreferrer noopener" class="readmore">View the project</a>
+                </div>
+            </article>   
+
+            <article class="article article--work">
+                <div class="article__inner">
+                    <h4 class="meta">WordPress</h4>
+                    <h5>Journeys by Design</h5>
+                    <p>Another Neptik project, this was a super large WordPress build with around 1,500 pages. I built the site and utilised SVG techniques to create stunning visuals.</p>
+                    <a href="https://journeysbydesign.com" target="_blank" rel="noreferrer noopener" class="readmore">View the project</a>
+                </div>
+            </article>   
+
+            <article class="article article--work">
+                <div class="article__inner">
+                    <h4 class="meta">Pattern Library</h4>
+                    <h5>Patrol Store</h5>
+                    <p>Working for WATB, this involved taking an existing E-commerce website and applying new branding and designs to the layouts, refreshing the look and feel of the site.</p>
+                    <a href="https://patrolstore.com" target="_blank" rel="noreferrer noopener" class="readmore">View the project</a>
+                </div>
+            </article>   
+
+            <article class="article article--work">
+                <div class="article__inner">
+                    <h4 class="meta">WordPress</h4>
+                    <h5>Pharm@Sea</h5>
+                    <p>An exciting Neptik project was to create the website for an NHS-owned and backed pharmacy at Royal Sussex County Hospital in Brighton.</p>
+                    <a href="http://pharmatsea.co.uk" target="_blank" rel="noreferrer noopener" class="readmore">View the project</a>
+                </div>
+            </article>   
+
+            <article class="article article--work">
+                <div class="article__inner">
+                    <h4 class="meta">WordPress</h4>
+                    <h5>Infinity Foods</h5>
+                    <p>Working for Neptik, I built a unique site for this local Brighton co-operative. It was fun to work with the organic and natural styles, giving the site a feel that perfectly matched the business.</p>
+                    <a href="http://infinityfoodsretail.coop/" target="_blank" rel="noreferrer noopener" class="readmore">View the project</a>
+                </div>
+            </article>                                                        
+    </section>
 
 </div>
 {{ partial "footer.html" . }}
