--- a/layouts/index.html
+++ b/layouts/index.html
@@ -73,6 +73,15 @@
             <article class="article article--work">
                 <div class="article__inner">
                     <h4 class="meta">WordPress</h4>
+                    <h5>Shippo</h5>
+                    <p>Surrey Digital Awards 2017 best B2B website winner. A WordPress site and my final project before leaving WATB, it has an integrated shipping tracker which connects to Podio.</p>
+                    <a href="http://shippo.co.uk" target="_blank" rel="noreferrer noopener" class="readmore">View the project</a>
+                </div>
+            </article>   
+
+            <article class="article article--work">
+                <div class="article__inner">
+                    <h4 class="meta">WordPress</h4>
                     <h5>Pharm@Sea</h5>
                     <p>An exciting Neptik project was to create the website for an NHS-owned and backed pharmacy at Royal Sussex County Hospital in Brighton.</p>
                     <a href="http://pharmatsea.co.uk" target="_blank" rel="noreferrer noopener" class="readmore">View the project</a>
