--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,5 +4,6 @@
         <p><a target="_blank" rel="noopener" href="https://github.com/brightonmike">Github</a><a target="_blank" rel="noopener" href="https://twitter.com/mmjg2011">Twitter</a></p>
     </footer>
 
+    <script src="{{ .Site.BaseURL }}js/bullets.js"></script>
 </body>
 <html>
