change prism style

--- a/assets/styles/_prism.scss
+++ b/assets/styles/_prism.scss
@@ -38,7 +38,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-    background: #272822;
+    background: darken(#212347, 2%);
 }
 
 /* Inline code */
