--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,10 +3,11 @@
 <head>
     <title>{{ .Title }}</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="{{ .Site.BaseURL }}">
     <meta name="description" content="{{ .Description }}">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css" />
+    <link rel="manifest" href="{{ .Site.BaseURL }}manifest.json">
 </head>
 <body>
