--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -1,3 +1,7 @@
+body {
+	scroll-behavior: smooth;
+}
+
 :root {
 	--body-font-size: 16px;
 
@@ -65,6 +69,7 @@ p {
 
 		@include breakpoint(tablet){
 			font-size: rem-calc(70);
+			margin: 0;
 		}
 
 		@include breakpoint(desktop){
@@ -85,14 +90,7 @@ p {
 		min-height: 80vh;
 		padding: $global-padding*2 $global-padding;
 	}
-
-	@include breakpoint(laptop){
-		padding: $global-padding*3 $global-padding;
-	}	
-
-	@include breakpoint(laptop){
-		padding: $global-padding*6 $global-padding;
-	}		
+		
 }
 
 .intro {
@@ -121,19 +119,31 @@ p {
 	padding: $global-padding 0;
 	background: darken($primary, 5%);
 
-	@include breakpoint(tablet){
-		display: flex;
-		flex-wrap: wrap;
-	}
-
 	h6 {
-		flex: 0 0 100%;
 		padding: 0 $global-padding;
 
 		@include breakpoint(tablet){
 			padding: $global-padding $global-padding*2;
 		}
+
 	}
+
+	// css grid
+    display: grid;
+    grid-gap: $grid-gap/2;
+    grid-template-columns: minmax($column-min, $column-max);
+    grid-auto-rows: minmax($row-min, $row-max);
+
+    @include breakpoint(laptop){
+    	grid-template-columns: minmax($column-min, 50%) minmax($column-min, 50%);
+    }
+
+    h6 {		
+    	@include breakpoint(laptop){
+			grid-column-start: span 2;
+		}
+	}
+
 }
 
 .articlegroup--work {
@@ -168,7 +178,6 @@ p {
 		overflow: hidden;
 		margin: rem-calc(40 0);
 		padding: $global-padding $global-padding*2;
-		max-width: rem-calc(700);
 
 		&::before {
 			content: '';
@@ -198,23 +207,10 @@ p {
 	}
 
 	@include breakpoint(tablet){
-		flex: 0 0 50%;		
-
-		// &::before {
-		// 	bottom: auto;
-		// 	top: 0;
-		// 	transform: translateY(100%);
-		// 	transition: all 0.2s ease-in-out;
-		// }
-
 		&:hover::before {
 			background: linear-gradient(40deg, $red 0%, $purple 80%);
 			transition: all 0.4s ease-in-out;
 		}
-	}
-
-	@include breakpoint(laptop){
-		flex: 0 0 30%;	
 	}
 
 	.readmore {
@@ -452,6 +448,33 @@ p {
 		outline: none;
 		background: darken($secondary, 15%);	
 		color: $primary;
+	}	
+}
+
+.button--svg {
+	display: block;
+	width: rem-calc(40);
+	padding: 0;
+
+	svg {
+		fill: rgba($secondary, 0.85);
+		width: rem-calc(40);
+		height: rem-calc(40);
+		transition: 0.1s ease;
+	}
+
+	&:hover svg {
+		fill: $secondary;
+	}
+
+	&:active {
+		background: none;
+		svg { fill: darken($secondary, 5%); }
+	}
+
+	&:focus {
+		background: none;
+		svg { fill: darken($secondary, 8%); }
 	}	
 }
 
