--- a/assets/styles/_settings.scss
+++ b/assets/styles/_settings.scss
@@ -145,6 +145,13 @@ $tabletbreak:rem-calc(768);
 $phabletbreak:rem-calc(460);
 $mobilebreak:rem-calc(320);
 
+// CSS Grid
+$column-min: 200px;
+$column-max: 12fr;
+$row-min: 0px;
+$row-max: auto;
+$grid-gap: $global-padding;
+
 // map the breakpoints
 $breakpoints: (
     mobile-min: $mobilebreak,
