--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -7,7 +7,7 @@
 // @include bullets-table;
 @include bullets-links;
 @include bullets-button;
-@include bullets-forms;
+// @include bullets-forms;
 @include bullets-image;
 @include bullets-embed;
 // @include bullets-wordpress;
