--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
 <head>
     <title>{{ .Title }}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="{{ .Site.BaseURL }}">
     <meta name="description" content="{{ .Description }}">
+    <meta name="theme-color" content="#2b2d5c">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css" />
     <link rel="manifest" href="{{ .Site.BaseURL }}manifest.json">
