--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,6 +7,7 @@
     <base href="{{ .Site.BaseURL }}">
     <meta name="description" content="{{ .Description }}">
     <meta name="theme-color" content="#2b2d5c">
+    <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}images/icons/icon-72x72.png">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css" />
     <link rel="manifest" href="{{ .Site.BaseURL }}manifest.json">
