--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -20,11 +20,11 @@
 <script>
     var element = document.querySelector('.page');
     var toggle = document.querySelector('.js-colour-switch');
-    var checkbox = document.querySelector('#theme');
+    var checkbox = document.getElementById('theme');
     toggle.addEventListener('click', function(e) {
         e.preventDefault();
         element.classList.toggle('page--light');
-        if (checkbox.checked = true) {
+        if (checkbox.checked === true) {
             checkbox.checked = false;
         } else {
             checkbox.checked = true;
