--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,19 +6,19 @@
 
     <script src="{{ .Site.BaseURL }}js/bullets.js"></script>
     <script>
-        // if('serviceWorker' in navigator) {
-        //     navigator.serviceWorker
-        //         .register('/sw.js', { scope: '/' })
-        //         .then(function(registration) {
-        //             console.log('Service Worker Registered');
-        //         });
+        if('serviceWorker' in navigator) {
+            navigator.serviceWorker
+                .register('/sw.js', { scope: '/' })
+                .then(function(registration) {
+                    console.log('Service Worker Registered');
+                });
 
-        //     navigator.serviceWorker
-        //         .ready
-        //         .then(function(registration) {
-        //             console.log('Service Worker Ready');
-        //         });
-        // }
+            navigator.serviceWorker
+                .ready
+                .then(function(registration) {
+                    console.log('Service Worker Ready');
+                });
+        }
     </script>    
 </body>
 <html>
