--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -363,7 +363,7 @@ p, .page__article ul li {
 
 }
 
-.wrap input[type=checkbox]:checked {
+.colourscheme input[type=checkbox]:checked {
 	&::after {
 		left: 50%;
 	}
