--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -2,15 +2,17 @@
 @import "../../node_modules/bullets-sass/scss/style";
 @import "fonts";
 
-// @include bullets-grid;
 @include bullets-type;
-// @include bullets-table;
 @include bullets-links;
 @include bullets-button;
-// @include bullets-forms;
 @include bullets-image;
 @include bullets-embed;
-// @include bullets-wordpress;
 
 @import "main";
+@import "page";
+@import "article";
+@import "header";
+@import "footer";
+@import "articlegroup";
+@import "colourscheme";
 @import "prism";
